refactor(api): 重构 API 文件结构并优化请求函数
- 删除了 api-endpoints.js 文件，直接在每个 API 文件中定义 endpoints- 优化了请求函数的命名和参数结构，提高了可读性和易用性
- 移除了冗余的 API_BASE 前缀，简化了 URL 构造
- 增加了部分缺失的 API 函数，以满足前端需求
- 调整了部分 API 路径，使其与后端接口保持一致