@@ -1,7 +1,9 @@
 package com.campus.service.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
+import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.campus.dao.CourseDao;
@@ -13,6 +15,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -29,18 +32,14 @@ public class CourseServiceImpl extends ServiceImpl<CourseDao, Course> implements
 
     @Override
     public Course getCourseByCourseCode(String courseNo) {
-        return baseMapper.findByCourseCode(courseNo);
-    }
-
-    @Override
-    public IPage<Course> getAllCourses(int pageNum, int pageSize) {
-        IPage<Course> page = new Page<>(pageNum, pageSize);
-        return this.page(page);
+        if (!StringUtils.isNotBlank(courseNo)) return null;
+        return getOne(Wrappers.<Course>lambdaQuery().eq(Course::getCourseNo, courseNo));
     }
 
     @Override
     public List<Course> getCoursesByCourseType(Integer courseType) {
-        return this.list(new LambdaQueryWrapper<Course>().eq(Course::getCourseType, courseType));
+        if (courseType == null) return list();
+        return this.list(Wrappers.<Course>lambdaQuery().eq(Course::getCourseType, courseType));
     }
 
     @Override
@@ -48,17 +47,14 @@ public class CourseServiceImpl extends ServiceImpl<CourseDao, Course> implements
     public boolean addCourse(Course course) {
         validateCourse(course);
 
-        long count = this.count(new LambdaQueryWrapper<Course>().eq(Course::getCourseNo, course.getCourseNo()));
-        if (count > 0) {
+        if (baseMapper.countByCourseCode(course.getCourseNo()) > 0) {
             throw new CustomException("课程代码 '" + course.getCourseNo() + "' 已存在");
         }
 
         Date now = new Date();
         course.setCreateTime(now);
         course.setUpdateTime(now);
-        if (course.getStatus() == null) {
-            course.setStatus("1");
-        }
+        course.setStatus(StringUtils.isBlank(course.getStatus()) ? "1" : course.getStatus());
 
         return this.save(course);
     }
@@ -66,21 +62,22 @@ public class CourseServiceImpl extends ServiceImpl<CourseDao, Course> implements
     @Override
     @Transactional
     public boolean updateCourse(Course course) {
-        if (course.getId() == null) {
+        if (course == null || course.getId() == null) {
             throw new CustomException("更新课程时必须提供课程ID");
         }
         validateCourse(course);
 
-        LambdaQueryWrapper<Course> wrapper = new LambdaQueryWrapper<>();
-        wrapper.eq(Course::getCourseNo, course.getCourseNo());
-        wrapper.ne(Course::getId, course.getId());
+        LambdaQueryWrapper<Course> wrapper = Wrappers.<Course>lambdaQuery()
+                .eq(Course::getCourseNo, course.getCourseNo())
+                .ne(Course::getId, course.getId());
         if (this.count(wrapper) > 0) {
             throw new CustomException("课程代码 '" + course.getCourseNo() + "' 已被其他课程使用");
         }
 
         course.setUpdateTime(new Date());
-        if (course.getStatus() == null) {
-            course.setStatus("1");
+        if (!StringUtils.isNotBlank(course.getStatus())) {
+            Course existing = getById(course.getId());
+            course.setStatus(existing != null ? existing.getStatus() : "1");
         }
 
         return this.updateById(course);
@@ -89,34 +86,59 @@ public class CourseServiceImpl extends ServiceImpl<CourseDao, Course> implements
     @Override
     @Transactional
     public boolean deleteCourse(Long id) {
+        if (id == null) return false;
         return this.removeById(id);
     }
 
     @Override
     @Transactional
     public boolean batchDeleteCourses(Long[] ids) {
-        return this.removeByIds(List.of(ids));
+        if (ids == null || ids.length == 0) return true;
+        return this.removeByIds(Arrays.asList(ids));
     }
 
     @Override
     public IPage<Course> getCoursesByPage(int pageNum, int pageSize) {
         IPage<Course> page = new Page<>(pageNum, pageSize);
-        return this.page(page);
+        return this.page(page, Wrappers.<Course>lambdaQuery().orderByAsc(Course::getCourseNo));
     }
-    
+
+    @Override
+    public IPage<Course> getAllCourses(int pageNum, int pageSize) {
+        return getCoursesByPage(pageNum, pageSize);
+    }
+
     @Override
     public int getCourseCount() {
         return (int) this.count();
     }
-    
+
     @Override
     public List<Course> searchCourses(String keyword) {
+        if (!StringUtils.isNotBlank(keyword)) {
+            return list(Wrappers.<Course>lambdaQuery().orderByAsc(Course::getCourseNo));
+        }
         return baseMapper.searchCoursesByKeyword(keyword);
     }
-    
+
     @Override
     public boolean checkCourseCodeExists(String courseNo) {
-        return baseMapper.checkCourseCodeExists(courseNo);
+        if (!StringUtils.isNotBlank(courseNo)) return false;
+        return baseMapper.countByCourseCode(courseNo) > 0;
+    }
+
+    @Override
+    @Transactional
+    public boolean updateCourseStatus(Long id, String status) {
+        if (id == null || !StringUtils.isNotBlank(status)) {
+            throw new IllegalArgumentException("课程ID和状态不能为空");
+        }
+
+        LambdaUpdateWrapper<Course> updateWrapper = Wrappers.<Course>lambdaUpdate()
+                .eq(Course::getId, id)
+                .set(Course::getStatus, status)
+                .set(Course::getUpdateTime, new Date());
+        return this.update(updateWrapper);
     }
 
     private void validateCourse(Course course) {
